--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,60 @@
 <mat-toolbar color="primary">
   <span>Natura Motu</span>
 </mat-toolbar>
-<h1>Recomendações</h1>
-<mat-horizontal-stepper linear #stepper>
-  <mat-step [stepControl]="obterUsuarioFormGroup">
-    <form [formGroup]="obterUsuarioFormGroup">
-      <ng-template matStepLabel>Insira o ID do Usuário</ng-template>
+<div class="main-content">
+  <div>
+    <form [formGroup]="usuarioFormGroup">
+      <h1>Insira o usuário</h1>
       <mat-form-field>
         <mat-label>ID</mat-label>
-        <input
-          matInput
-          placeholder="Ex: 123456"
-          formControlName="idUsuario"
-          required
-        />
+        <input matInput placeholder="Ex: 123456" formControlName="idUsuario" />
       </mat-form-field>
       <div>
-        <button mat-raised-button color="primary" matStepperNext>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="onClickObterRecomendacoes()"
+        >
           Próximo
         </button>
       </div>
     </form>
-  </mat-step>
-  <mat-step>
-    <ng-template matStepLabel>Produtos Recomendados</ng-template>
-    <div>
-      <owl-carousel-o [options]="customOptions">
-        <ng-template carouselSlide *ngFor="let produto of produtos">
-          <div class="slide">
-            <mat-card class="example-card">
+  </div>
+  <div *ngIf="this.usuarioFormGroup.valid">
+    <h1>Recomendações</h1>
+    <owl-carousel-o [options]="customOptions">
+      <ng-template carouselSlide *ngFor="let produto of produtos">
+        <div class="slide">
+          <mat-card class="example-card">
+            <div class="card-image">
               <img
                 mat-card-image
+                class=""
                 src="https://material.angular.io/assets/img/examples/shiba2.jpg"
                 alt="Photo of a Shiba Inu"
               />
-              <mat-card-title>{{ produto.nome }}</mat-card-title>
-              <mat-card-subtitle>{{ produto.marca }}</mat-card-subtitle>
-              <mat-card-content>
-                <p>{{ produto.descricao }}.</p>
-                <h2>{{ produto.preco | currency: "BRL" }}</h2>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-raised-button color="primary">
-                  Adicionar ao carrinho
-                </button>
-              </mat-card-actions>
-              <mat-card-footer>
-                <mat-chip-list aria-label="Tags dos produtos">
-                  <mat-chip *ngFor="let tag of produto.tags" color="primary">
-                    {{ tag }}
-                  </mat-chip>
-                </mat-chip-list>
-              </mat-card-footer>
-            </mat-card>
-          </div>
-        </ng-template>
-      </owl-carousel-o>
-    </div>
-  </mat-step>
-</mat-horizontal-stepper>
+            </div>
+            <mat-card-title>{{ produto.nome }}</mat-card-title>
+            <mat-card-subtitle>{{ produto.marca }}</mat-card-subtitle>
+            <mat-card-content>
+              <p>{{ produto.descricao }}.</p>
+              <h2>{{ produto.preco | currency: "BRL" }}</h2>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-raised-button color="primary">
+                Adicionar ao carrinho
+              </button>
+            </mat-card-actions>
+            <mat-card-footer class="footer-card">
+              <mat-chip-list aria-label="Tags dos produtos">
+                <mat-chip *ngFor="let tag of produto.tags" color="primary">
+                  {{ tag }}
+                </mat-chip>
+              </mat-chip-list>
+            </mat-card-footer>
+          </mat-card>
+        </div>
+      </ng-template>
+    </owl-carousel-o>
+  </div>
+</div>
