--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,68 @@
 .main-content {
-  margin: 3rem;
+  background: #f5f5f5;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+}
+
+.mat-toolbar {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  background-color: white;
+  color: #ff9933;
+}
+
+.logo {
+  width: 65px;
+}
+
+#product-container {
+  padding: 15px;
+}
+
+#sacola-container {
+  background: white;
+  padding: 30px;
+}
+
+#valores-compra {
+  float: right;
+}
+
+#container-title {
+  font-weight: 700;
+  letter-spacing: 0.0625rem;
+}
+
+#container-title::after {
+  background-color: #f93;
+  height: 0.125rem;
+  margin: 0.5rem auto 0;
+  width: 3.75rem;
+}
+
+#sacola-table {
+  width: 100%;
+  box-shadow: none;
+}
+
+#frete-container {
+  display: inline-flex;
+}
+
+#sacola-button {
+  margin-left: 50px;
 }
 
 .slide {
   margin: 1rem;
 }
 
-.example-card {
+.recommendation-card {
   animation-timing-function: linear;
+}
+
+.mat-card-title {
+  font-size: 1rem;
 }
 
 .card-image {
@@ -22,4 +77,22 @@
 
 .footer-card {
   margin: 4px;
+  display: flex;
+  justify-content: center;
+}
+
+#recommendation-button {
+  justify-content: center;
+}
+
+::ng-deep.owl-prev {
+  background-color: #ff912e !important;
+}
+
+::ng-deep.owl-next {
+  background-color: #ff912e !important;
+}
+
+::ng-deep.owl-dot.active span {
+  background-color: #ff912e !important;
 }
