--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,134 @@
-<mat-toolbar color="primary">
-  <span>Natura Motu</span>
+<mat-toolbar>
+  <span>
+    <img
+      class="logo"
+      src="../assets/images/natura-logo.png"
+      alt="Natura Logo"
+    />
+    Motu
+  </span>
 </mat-toolbar>
-<div class="main-content">
-  <div>
-    <form [formGroup]="usuarioFormGroup">
-      <h1>Insira o usuário</h1>
-      <mat-form-field>
-        <mat-label>ID</mat-label>
-        <input matInput placeholder="Ex: 123456" formControlName="idUsuario" />
-      </mat-form-field>
-      <div>
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="onClickObterRecomendacoes()"
-        >
-          Próximo
-        </button>
+<div class="main-content container-fluid">
+  <div class="row" id="product-container">
+    <div class="col-7" id="sacola-container">
+      <h1 id="container-title">Minha Sacola</h1>
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8"
+        id="sacola-table"
+      >
+        <ng-container matColumnDef="descricao">
+          <th mat-header-cell *matHeaderCellDef>Meus Produtos</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.descricao }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="qtd">
+          <th mat-header-cell *matHeaderCellDef>Qtde</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.quantidade }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="preco">
+          <th mat-header-cell *matHeaderCellDef>Preço</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.preco | currency: "BRL" }}
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
+    <div class="col-4 container-fluid">
+      <div class="row">
+        <div class="col-12" id="sacola-container">
+          <h2>Simular Frete</h2>
+          <div class="frete-container">
+            <mat-form-field>
+              <mat-label>CEP para Entrega</mat-label>
+              <input matInput [ngModel]="compra.cep" />
+            </mat-form-field>
+            <button
+              mat-raised-button
+              color="primary"
+              id="sacola-button"
+              (click)="onClickCalcular()"
+            >
+              Calcular
+            </button>
+          </div>
+        </div>
       </div>
-    </form>
+      <div class="row" style="margin-top: 10px">
+        <div class="col-12" id="sacola-container">
+          <p>
+            Valor da Compra
+            <span id="valores-compra">{{
+              compra.valorCompra | currency: "BRL"
+            }}</span>
+          </p>
+          <p>
+            Descontos
+            <span id="valores-compra">{{
+              compra.valorDesconto | currency: "BRL"
+            }}</span>
+          </p>
+          <p>
+            Entrega
+            <span id="valores-compra">{{
+              compra.valorEntrega | currency: "BRL"
+            }}</span>
+          </p>
+          <p>
+            Total
+            <span id="valores-compra">
+              {{
+                compra.valorCompra - compra.valorDesconto + compra.valorEntrega
+                  | currency: "BRL"
+              }}
+            </span>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
-  <div *ngIf="this.usuarioFormGroup.valid">
-    <h1>Recomendações</h1>
+  <div *ngIf="!flLoading">
+    <h1 id="container-title">Recomendações</h1>
     <owl-carousel-o [options]="customOptions">
-      <ng-template carouselSlide *ngFor="let produto of produtos">
+      <ng-template carouselSlide *ngFor="let recomendacao of recomendacoes">
         <div class="slide">
-          <mat-card class="example-card">
+          <mat-card class="recommendation-card">
             <div class="card-image">
               <img
                 mat-card-image
                 class=""
-                src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                src="../assets/images/default-recommendation.jpg"
                 alt="Photo of a Shiba Inu"
               />
             </div>
-            <mat-card-title>{{ produto.nome }}</mat-card-title>
-            <mat-card-subtitle>{{ produto.marca }}</mat-card-subtitle>
+            <mat-card-title>{{ recomendacao.descricao }}</mat-card-title>
             <mat-card-content>
-              <p>{{ produto.descricao }}.</p>
-              <h2>{{ produto.preco | currency: "BRL" }}</h2>
+              <!-- <h2>{{ recomendacao.preco | currency: "BRL" }}</h2> -->
             </mat-card-content>
-            <mat-card-actions>
-              <button mat-raised-button color="primary">
+            <mat-card-actions style="display: flex; justify-content: center">
+              <button
+                mat-raised-button
+                color="primary"
+                id="recommendation-button;"
+              >
+                <mat-icon>shopping_cart</mat-icon>
                 Adicionar ao carrinho
               </button>
             </mat-card-actions>
             <mat-card-footer class="footer-card">
               <mat-chip-list aria-label="Tags dos produtos">
-                <mat-chip *ngFor="let tag of produto.tags" color="primary">
+                <mat-chip
+                  *ngFor="let tag of recomendacao.tags"
+                  color="primary"
+                  selected
+                >
                   {{ tag }}
                 </mat-chip>
               </mat-chip-list>
