--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,25 +1,45 @@
 
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+@import '~@angular/material/theming';
 @include mat-core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$angular-motu-web-primary: mat-palette($mat-indigo);
+$natura-motu-palette: (
+    50 : #fff3e7,
+    100 : #ffe0c2,
+    200 : #ffcc99,
+    300 : #ffb870,
+    400 : #ffa852,
+    500 : #ff9933,
+    600 : #ff912e,
+    700 : #ff8627,
+    800 : #ff7c20,
+    900 : #ff6b14,
+    A100 : #ffffff,
+    A200 : #fffcfb,
+    A400 : #ffdac8,
+    A700 : #ffc9ae,
+    contrast: (
+        50 :white,
+        100 :white,
+        200 :white,
+        300 :white,
+        400 :white,
+        500 :white,
+        600 :white,
+        700 :white,
+        800 :white,
+        900 :white,
+        A100 :white,
+        A200 :white,
+        A400 :white,
+        A700 :white,
+    )
+);
+
+
+$angular-motu-web-primary: mat-palette($natura-motu-palette);
 $angular-motu-web-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
 $angular-motu-web-warn: mat-palette($mat-red);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $angular-motu-web-theme: mat-light-theme((
   color: (
     primary: $angular-motu-web-primary,
@@ -28,8 +48,5 @@ $angular-motu-web-theme: mat-light-theme((
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include angular-material-theme($angular-motu-web-theme);
 
