feat: incluindo servico de recomendacao

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -138,4 +138,5 @@
       </ng-template>
     </owl-carousel-o>
   </div>
+  <ngx-loading [show]="flLoading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 </div>
