--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@
   background: #f5f5f5;
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
+  height: 93vh;
 }
 
 .mat-toolbar {
@@ -13,6 +14,18 @@
 
 .logo {
   width: 65px;
+}
+
+#usuario-container{
+  display: inline-flex;
+  float: left;
+}
+
+#usuario-field{
+  width: 10rem;
+  font-size: .9rem;
+  display: inline-flex;
+  padding-top: 1rem;
 }
 
 #product-container {
@@ -49,7 +62,7 @@
   display: inline-flex;
 }
 
-#sacola-button {
+#sacola-button, #usuario-button {
   margin-left: 50px;
 }
 
