--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,34 @@
 <mat-toolbar>
-  <span>
-    <img
-      class="logo"
-      src="../assets/images/natura-logo.png"
-      alt="Natura Logo"
-    />
-    Motu
-  </span>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-8">
+        <img
+          class="logo"
+          src="../assets/images/natura-logo.png"
+          alt="Natura Logo"
+        />
+        Motu
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <mat-form-field id="usuario-field">
+          <mat-label>ID Usuário</mat-label>
+          <input matInput [(ngModel)]="idUsuario" />
+        </mat-form-field>
+        <button
+          mat-raised-button
+          color="primary"
+          id="usuario-button"
+          (click)="obterRecomendacoes()"
+        >
+          Buscar
+        </button>
+      </div>
+    </div>
+  </div>
 </mat-toolbar>
 <div class="main-content container-fluid">
   <div class="row" id="product-container">
-    <div class="col-7" id="sacola-container">
+    <div class="col-lg-7 col-md-7 col-sm-7" id="sacola-container">
       <h1 id="container-title">Minha Sacola</h1>
       <table
         mat-table
@@ -40,10 +58,10 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
-    <div class="col-1"></div>
-    <div class="col-4 container-fluid">
+    <div class="col-lg-1 col-md-1 col-sm-1"></div>
+    <div class="col-lg-4 col-md-4 col-sm-4 container-fluid">
       <div class="row">
-        <div class="col-12" id="sacola-container">
+        <div class="col-lg-12 col-md-12 col-sm-12" id="sacola-container">
           <h2>Simular Frete</h2>
           <div class="frete-container">
             <mat-form-field>
@@ -62,7 +80,7 @@
         </div>
       </div>
       <div class="row" style="margin-top: 10px">
-        <div class="col-12" id="sacola-container">
+        <div class="col-lg-12 col-md-12 col-sm-12" id="sacola-container">
           <p>
             Valor da Compra
             <span id="valores-compra">{{
@@ -105,7 +123,7 @@
                 mat-card-image
                 class=""
                 src="../assets/images/default-recommendation.jpg"
-                alt="Photo of a Shiba Inu"
+                alt="Imagem pré-definida para qualquer produto Natura"
               />
             </div>
             <mat-card-title>{{ recomendacao.descricao }}</mat-card-title>
@@ -138,5 +156,8 @@
       </ng-template>
     </owl-carousel-o>
   </div>
-  <ngx-loading [show]="flLoading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+  <ngx-loading
+    [show]="flLoading"
+    [config]="{ backdropBorderRadius: '3px' }"
+  ></ngx-loading>
 </div>
