--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
 <div class="main-content container-fluid">
   <div class="row" id="product-container">
     <div class="col-lg-7 col-md-7 col-sm-7" id="sacola-container">
-      <h1 id="container-title">Minha Sacola</h1>
+      <h1 id="container-title">Meu Pedido</h1>
       <table
         mat-table
         [dataSource]="dataSource"
